--- a/v1/themes/up-business-theme/layouts/partials/sections/hero.html
+++ b/v1/themes/up-business-theme/layouts/partials/sections/hero.html
@@ -1,14 +1,16 @@
 <section class="section hero py-5">
   <div class="container">
-    <div class="row flex-column flex-xl-row-reverse">
+    <div class="row flex-column">
+    <!--
       <div class="col-12 col-xl-6  d-flex flex-column justify-content-center hero-image">
         {{ with .content.images.hero }}
         <img class="img-fluid rounded" src="{{ .url }}" alt="{{ .alt }}" />
         {{ end }}
       </div>
-      <div class="col-12 col-xl-6 d-flex flex-column justify-content-center">
+    -->
+      <div class="col-12 col-xl-9 d-flex flex-column justify-content-center">
         {{ with .content.title }}
-        <h3 class="hero-title fw-bold display-1 text-primary text-center text-xl-start pb-4">{{ . | markdownify }}</h3>
+        <h3 class="hero-title fw-bold display-2 text-primary text-center text-xl-start pb-4">{{ . | markdownify }}</h3>
         {{ end }}
         {{ with .content.text }}
         <p class="text-center text-black-61 text-xl-start pb-4">{{ . | markdownify }}</p>
