--- a/v1/themes/up-business-theme/assets/scss/sections/hero.scss
+++ b/v1/themes/up-business-theme/assets/scss/sections/hero.scss
@@ -1,5 +1,7 @@
 .section.hero {
-  padding: 4rem !important;
+  position: relative;
+  z-index: 0;
+  padding: 2rem !important;
   background-image: url(../../images/hero_img.jpg);
   background-size: cover;
   background-position: bottom;
@@ -25,4 +27,15 @@
     align-items: center;
     display: flex;
   }
+
+  &:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(6 35 36 / 45%);
+    top: 0;
+    left: 0;
+}
 }
