--- a/v1/themes/up-business-theme/assets/scss/shared/_header.scss
+++ b/v1/themes/up-business-theme/assets/scss/shared/_header.scss
@@ -1,10 +1,16 @@
 .navbar {
   position: absolute;
+  z-index: 100;
   width: 100%;
   .navbar-brand {
     img {
       width: auto;
       max-height: calc(1.4rem + .6vw);
+    }
+  }
+  .navbar-nav {
+    .nav-link {
+      color: #fff;
     }
   }
 }
