--- a/v1/themes/up-business-theme/layouts/partials/sections/hero.html
+++ b/v1/themes/up-business-theme/layouts/partials/sections/hero.html
@@ -13,7 +13,7 @@
         <h3 class="hero-title fw-bold display-2 text-primary text-center text-xl-start pb-4">{{ . | markdownify }}</h3>
         {{ end }}
         {{ with .content.text }}
-        <p class="text-center text-black-61 text-xl-start pb-4">{{ . | markdownify }}</p>
+        <p class="text-center text-white text-xl-start pb-4">{{ . | markdownify }}</p>
         {{ end }}
         <div class="d-flex flex-column flex-xl-row">
           {{ with .content.buttonPrimary }}
