--- a/v1/themes/up-business-theme/assets/scss/sections/hero.scss
+++ b/v1/themes/up-business-theme/assets/scss/sections/hero.scss
@@ -3,8 +3,7 @@
   z-index: 0;
   padding: 2rem !important;
   background-image: url(../../images/hero_img.jpg);
-  background-size: cover;
-  background-position: bottom;
+  overflow: hidden;
   height: 100vh;
   //.hero-image {
     // @media (min-width: 1400px) {
@@ -34,8 +33,11 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    background-color: rgb(6 35 36 / 45%);
     top: 0;
     left: 0;
+    filter: blur(4px) brightness(0.6);
+    transform: scale(1.05);
+    background-image: url(../../images/hero_img.jpg);
+    background-size: cover;
 }
 }
