--- a/v1/themes/up-business-theme/assets/scss/sections/hero.scss
+++ b/v1/themes/up-business-theme/assets/scss/sections/hero.scss
@@ -37,7 +37,7 @@
     left: 0;
     filter: blur(4px) brightness(0.6);
     transform: scale(1.05);
-    background-image: url(../../images/hero_img.jpg);
+    background-image: url(../../images/hero_img2.jpg);
     background-size: cover;
 }
 }
