--- a/v1/themes/up-business-theme/assets/scss/shared/_header.scss
+++ b/v1/themes/up-business-theme/assets/scss/shared/_header.scss
@@ -9,8 +9,8 @@
     }
   }
   .navbar-nav {
-    .nav-link {
-      color: #fff;
+    .nav-link.text-primary {
+      color: #fff !important;
     }
   }
 }
