--- a/v1/themes/up-business-theme/assets/scss/sections/hero.scss
+++ b/v1/themes/up-business-theme/assets/scss/sections/hero.scss
@@ -38,5 +38,6 @@
     transform: scale(1.05);
     background-image: url(../../images/hero_img2.jpg);
     background-size: cover;
+    background-position: center;
 }
 }
