--- a/v1/themes/up-business-theme/assets/scss/shared/_fonts.scss
+++ b/v1/themes/up-business-theme/assets/scss/shared/_fonts.scss
@@ -1,17 +1,18 @@
 @font-face {
-  font-family: 'Inter';
-  src: url('{{ site.BaseURL }}/fonts/Inter-Regular.ttf') format('truetype');
+  font-family: 'Pathway Gothic One';
+  src: url('{{ site.BaseURL }}/PathwayGothicOne-Regular.ttf') format('truetype');
   font-weight: normal;
 }
 
-@font-face {
-  font-family: 'Inter';
+/*@font-face {
+  font-family: 'Pathway Gothic One';
   src: url('{{ site.BaseURL }}/fonts/Inter-SemiBold.ttf') format('truetype');
   font-weight: 600;
 }
 
 @font-face {
-  font-family: 'Inter';
+  font-family: 'Pathway Gothic One';
   src: url('{{ site.BaseURL }}/fonts/Inter-Bold.ttf') format('truetype');
   font-weight: bold;
 }
+*/
