Home page (almost done!)

--- a/v1/themes/hugo-universal-theme/layouts/index.html
+++ b/v1/themes/hugo-universal-theme/layouts/index.html
@@ -10,9 +10,9 @@
 
     <div id="all">
 
-        {{ partial "top.html" . }}
-
         {{ partial "nav.html" . }}
+
+        {{ partial "entry.html" . }}
 
         {{ partial "carousel.html" . }}
 
@@ -20,11 +20,13 @@
 
         {{ partial "testimonials.html" . }}
 
+        {{ partial "clients.html" . }}
+
         {{ partial "see_more.html" . }}
 
         {{ partial "recent_posts.html" . }}
 
-        {{ partial "clients.html" . }}
+        {{ partial "top.html" . }}
 
         {{ partial "footer.html" . }}
 
