--- a/v1/themes/hugo-universal-theme/static/css/owl.theme.css
+++ b/v1/themes/hugo-universal-theme/static/css/owl.theme.css
@@ -32,15 +32,16 @@
 }
 .owl-theme .owl-controls .owl-page span{
 	display: block;
-	width: 12px;
-	height: 12px;
-	margin: 5px 7px;
 	filter: Alpha(Opacity=50);/*IE7 fix*/
 	opacity: 0.5;
-	-webkit-border-radius: 20px;
-	-moz-border-radius: 20px;
-	border-radius: 20px;
 	background: #869791;
+}
+
+.owl-theme .owl-controls .owl-page span {
+    width: 16px;
+    height: 2px;
+    margin: 5px 3px;
+    border-radius: none;
 }
 
 .owl-theme .owl-controls .owl-page.active span,
