--- a/v1/themes/hugo-universal-theme/layouts/partials/footer.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/footer.html
@@ -7,15 +7,14 @@
 
             {{ .Site.Params.about_us | safeHTML }}
 
-            <hr class="hidden-md hidden-lg hidden-sm">
 
         </div>
         <!-- /.col-md-4 -->
+        <hr class="hidden-md hidden-lg">
         {{ end }}
-
+        {{ if isset .Site.Params "recent_posts" }}{{ if (default true .Site.Params.footer.recent_posts.enable) }}
         <div class="col-md-4 col-sm-6">
 
-            {{ if isset .Site.Params "recent_posts" }}{{ if (default true .Site.Params.footer.recent_posts.enable) }}
             <h4>{{ i18n "recentPosts" }}</h4>
 
             <div class="blog-entries">
@@ -36,11 +35,10 @@
                 </div>
                 {{ end }}
             </div>
-
-            <hr class="hidden-md hidden-lg">
-            {{ end }}{{ end }}
-
+            
         </div>
+        <hr class="hidden-md hidden-lg">
+        {{ end }}{{ end }}
         <!-- /.col-md-4 -->
 
         {{ if isset .Site.Params "address" }}
@@ -52,12 +50,22 @@
 
 	    <a href="{{ default "/contact" .Site.Params.contact_url }}" class="btn btn-small btn-template-main">{{ i18n "contactGoTo" }}</a>
 
-            <hr class="hidden-md hidden-lg hidden-sm">
-
         </div>
+        <hr class="hidden-md hidden-lg">
+
         <!-- /.col-md-4 -->
         {{ end }}
+        <div class="col-md-4 col-sm-6">
 
+            <h4>Follow Us</h4>
+              <p>Subscribe to our newsletter.</p>
+              <form>
+                <input type="email" placeholder="Email">
+                <button type="submit" class="btn btn-template-main">Subscribe</button>
+              </form>
+              {{ partial "top.html" . }}
+  
+        </div>
     </div>
     <!-- /.container -->
 </footer>
