--- a/v1/themes/hugo-universal-theme/layouts/partials/features.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/features.html
@@ -5,7 +5,7 @@
 <section class="bar background-white">
     <div class="container">
         <div class="heading text-center">
-            <h2>Achivements</h2>
+            <h2>features</h2>
         </div>
         {{ $elements := default 3 .Site.Params.features.cols }}
         {{ $features := sort .Site.Data.features "weight" }}
