--- a/v1/themes/hugo-universal-theme/layouts/404.html
+++ b/v1/themes/hugo-universal-theme/layouts/404.html
@@ -8,14 +8,21 @@
 
   <body>
 
-    <div id="all">
+    <div id="all" style="
+    background: url('../img/fixed-background-2.jpg');
+    background-color: #21a99f;
+    background-blend-mode: multiply;
+    background-size: cover;">
 
-        {{ partial "nav.html" . }}
-
-        <div id="content">
+        <div id="content" 
+        style="
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;">
             <div class="container">
 
-                <div class="col-sm-6 col-sm-offset-3" id="error-page">
+                <div class="col-md-6 col-md-offset-3" id="error-page">
 
                     <div class="box">
 
@@ -33,8 +40,6 @@
             <!-- /.container -->
         </div>
         <!-- /#content -->
-
-        {{ partial "footer.html" . }}
 
     </div>
   </body>
