--- a/v1/themes/hugo-universal-theme/layouts/partials/breadcrumbs.html
+++ b/v1/themes/hugo-universal-theme/layouts/partials/breadcrumbs.html
@@ -1,4 +1,5 @@
 <div id="heading-breadcrumbs">
+    <div class="dark-mask"></div>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
