--- a/v1/themes/hugo-universal-theme/static/css/style.blue.css
+++ b/v1/themes/hugo-universal-theme/static/css/style.blue.css
@@ -191,6 +191,7 @@ ul.list-style-none {
 }
 #error-page h4 {
   margin-bottom: 40px;
+  /* color: #fff; */
 }
 #error-page p.buttons {
   margin-top: 40px;
@@ -1694,15 +1695,14 @@ fieldset[disabled] .btn-template-primary.active {
 }
 /* universal box */
 .box {
-  background: #fff;
+  background: #ffffff;
   margin: 0 0 30px;
-  border: solid 1px #ccc;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 20px 0;
-  border-left: none;
-  border-right: none;
+  padding: 20px;
+  border-radius: 1px;
+  box-shadow: 5px 5px 10px #00000007, -5px -5px 10px #00000007;
 }
 .box .box-header {
   background: #f7f7f7;
@@ -1759,19 +1759,22 @@ fieldset[disabled] .btn-template-primary.active {
   border: none;
 }
 #heading-breadcrumbs {
-  background: url('../img/texture-bw.png') center center repeat;
+  background: url('../img/fixed-background-2.jpg') center center repeat;
   padding: 20px 0;
   margin-bottom: 40px;
+  padding-top: 103px;
+  background-color: var(--primary-accent);
+  background-blend-mode: multiply;
+  position: relative;
 }
 #heading-breadcrumbs.no-mb {
   margin-bottom: 0;
 }
 #heading-breadcrumbs h1 {
-  color: #333333;
+  color: #ffffff;
   text-transform: uppercase;
   font-size: 30px;
   font-weight: 700;
-  letter-spacing: 0.08em;
 }
 @media (max-width: 991px) {
   #heading-breadcrumbs h1 {
@@ -1832,7 +1835,7 @@ fieldset[disabled] .btn-template-primary.active {
   margin-top: 20px;
   margin-bottom: 20px;
 }
-.bar .dark-mask {
+.bar .dark-mask, #heading-breadcrumbs .dark-mask {
   position: absolute;
   top: 0;
   left: 0;
